# d20

./: .editorconfig  .pre-commit-config.yaml  makefile  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
docs/: 404.html  CNAME  index.html  isola.md
docs/Altro/: Errori comuni Django.md  Nginx Server con Fail2Ban.md
docs/Altro/Altro/: index.html
docs/Altro/Django, Postgrest, Nginx e Gunicorn/: index.html
docs/Altro/Nginx Server con Fail2Ban/: index.html
docs/Backend/Altro/: index.html
docs/Backend/Django, Postgrest, Nginx e Gunicorn/: index.html
docs/Backend/Errori comuni Django/: index.html
docs/Backend/FTP/: index.html
docs/Backend/Nginx Server con Fail2Ban/: index.html
docs/Dev/Python/: index.html
docs/Esempi/Google implementation/: index.html
docs/Games/Monster Hunter Wild/: index.html
docs/Software e App/manga/: index.html
docs/isola/: index.html
docs/search/: search_index.json
site/: 404.html  index.html
site/Altro/Altro/: index.html
site/Altro/Django, Postgrest, Nginx e Gunicorn/: index.html
site/Altro/Errori comuni Django/: index.html
site/Altro/Nginx Server con Fail2Ban/: index.html
site/isola/: index.html
site/search/: search_index.json
src/: index.md  isola.md
src/Altro/: Django, Postgrest, Nginx e Gunicorn.md
src/Backend/: Altro.md  FTP.md  Nginx Server con Fail2Ban.md
src/Dev/: Python.md
src/Esempi/: Google implementation.md
src/Games/: Monster Hunter Wild.md
src/Software e App/: manga.md
