[tool.poetry]
name = "personal-documentation"
version = "1.0.0"
description = ""
authors = ["Fundor333 <fundor333@fundor333.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.10,<3.11"
mkdocs = "^1.5.3"
mkdocs-material = ">9.0"
pymdown-extensions = ">=8.0"
diagrams = "*"
mkdocs-encryptcontent-plugin = "^3.0.3"
mkdocs-minify-plugin = "^0.8.0"
mkdocs-open-in-new-tab = "^1.0.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
