[project]
name = "personal-documentation"
version = "1.0.0"
description = ""
authors = [{ name = "Fundor333", email = "fundor333@fundor333.com" }]
requires-python = ">3.10,<4.0"
readme = "README.md"
dependencies = [
    "mkdocs>1.5.3",
    "mkdocs-material>9.0",
    "pymdown-extensions>=8.0",
    "diagrams",
    "mkdocs-encryptcontent-plugin>=3",
    "mkdocs-minify-plugin>=0.8.0",
    "mkdocs-open-in-new-tab>=1",
]

[dependency-groups]
dev = ["pre-commit>=4.1.0,<5"]
